# sqlite-shelve

./: .gitignore  LICENSE  README.md  Vagrantfile  ez_setup.py  setup.cfg  setup.py  shelve-tool
.github/workflows/: main.yml
playbooks/: setup.yml
sqliteshelve/: __init__.py
src/sqliteshelve/: __init__.py  cli.py
tests/: mydb  test_sqliteshelve.py
