[metadata]
name = sqlite-shelve 
version = 2.1.0 
author = Michael Mabin 
author_email = d3vvnull@gmail.com 
description = A SQLite implementation of the Python Shelf interface 
long_description = file: README.md
long_description_content_type = text/markdown 
url= https://github.com/devnull255/sqlite-shelve 
project_urls = 
   Bug Tracker = https://github.com/devnull255/sqlite-shelve/issues
classifiers =
   Programming Language :: Python :: 3 
   License :: OSI Approved :: MIT License 
   Operating System :: OS Independent 

[options]
package_dir = 
   = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    shelve-tool = sqliteshelve.cli:cli
